# django-templates-debugger

./: .gitignore  LICENSE  MANIFEST.in  README.rst  manage.py  setup.cfg
templates_debugger/: __init__.py  apps.py  settings.py  urls.py
templates_debugger/templates/templates_debugger/: dirs.html  index.html
templates_debugger/templatetags/: templates_debugger.py
templates_debugger/views/: dirs.py  home.py  render.py
