[metadata]
name = django-templates-debugger
version = attr: templates_debugger.__version__
description = Templates Debugger for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Eliott Dumeix
author_email = eliott.dumeix@gmail.com
url = https://github.com/boolangery/django-templates-debugger
keywords = django, template
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
zip_safe = False
# jwcrypto has a direct dependency on six, but does not list it yet in a release
# Previously, cryptography also depended on six, so this was unnoticed
install_requires =
	Faker >= 13.3.3

[options.packages.find]
exclude =
	tests
	tests.*
